--- a/L3Task02/fullstack-project-management-tool-master/backend/package.json
+++ b/L3Task02/fullstack-project-management-tool-master/backend/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
     "serve": "nodemon server.js"
@@ -18,6 +18,6 @@
     "mongoose": "^6.6.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.22"
   }
 }
