--- a/L3Task02/fullstack-project-management-tool-master/backend/.env
+++ b/L3Task02/fullstack-project-management-tool-master/backend/.env
@@ -1,3 +1,3 @@
 SERVER_PORT= 9000
 CORS_ORIGIN="http://localhost:3000"
-MONGODB_PATH=mongodb://localhost:27017/
+MONGODB_PATH=mongodb://localhost:27017/project-management-tool
