--- a/L3Task02/fullstack-project-management-tool-master/backend/package.json
+++ b/L3Task02/fullstack-project-management-tool-master/backend/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "serve": "nodemon server.js"
@@ -15,7 +15,8 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "joi": "^17.6.0",
-    "mongoose": "^6.6.0"
+    "mongoose": "^6.6.0",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
