--- a/L3Task02/fullstack-project-management-tool-master/backend/package.json
+++ b/L3Task02/fullstack-project-management-tool-master/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "serve": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build": "npm install"
   },
   "keywords": [],
   "author": "",
