--- a/L3Task02/fullstack-project-management-tool-master/server/package.json
+++ b/L3Task02/fullstack-project-management-tool-master/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon server.js",
+    "serve": "nodemon server.js",
     "build": "npm install"
   },
   "keywords": [],
