--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,9 @@
 # netlify.toml
 
 [build]
-  command = "npm install"
+  command = "npm run build"
   publish = "task1/frontend/build" # Publish directory for Task 1 frontend
 
 [context.production]
-  command = "npm install"
+  command = "npm run build"
   publish = "task2/client/build" # Publish directory for Task 2 frontend
