--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,7 @@
 [build]
   command = "npm run build"
   publish = "Task02/client/build" 
+  base ="client"
 
 [context.production]
   command = "npm run build"
