--- a/netlify.toml
+++ b/netlify.toml
@@ -2,9 +2,9 @@
 
 [build]
   command = "npm run build"
-  publish = "Task02/client/build" 
-  base =  "Task02/client"
+  publish = "L3Task02/client/build" 
+  base = "L3Task02/client"
 
 [context.production]
   command = "npm run build"
-  publish = "Task02/client/build" 
+  publish = "L3Task02/client/build" 
