--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,7 @@
 [build]
   command = "npm run build"
   publish = "L3Task02/client/build" 
-  base = "L3Task02/client"
+  base = "L3Task02/fullstack-project-management-tool-master/client"
 
 [context.production]
   command = "npm run build"
